plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

mainClassName = 'me.michael.Bot'

group 'me.michael'
version '1.0-SNAPSHOT'
def jdaVersion = '4.1.1_108'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile "net.dv8tion:JDA:$jdaVersion"
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.0'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
    compile group: 'com.jagrosh', name: 'jda-utilities', version: '3.0.2'
    compile group: 'me.duncte123', name: 'botCommons', version: '1.0.78'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    compile 'io.github.cdimascio:java-dotenv:5.1.3'
}

compileJava.options.encoding = 'UTF-8'